chore: upd mcp examples txt

--- a/examples/tools/00-tools-introduction/example.ipynb
+++ b/examples/tools/00-tools-introduction/example.ipynb
@@ -1,16 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "Hbol",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import marimo as mo"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "MJUe",
    "metadata": {},
@@ -156,8 +146,6 @@
    "source": [
     "## Этап 3: Возврат результата\n",
     "\n",
-    "Python-функция может вернуть простой текст, JSON или сложные объекты. Рекомендуется возвращать структурированные данные (JSON), так модели проще их обрабатывать.\n",
-    "\n",
     "Модель получает результат и может:\n",
     "- Вызвать еще один инструмент\n",
     "- Вернуть окончательный ответ пользователю\n",
@@ -182,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "emfo",
    "metadata": {},
    "outputs": [],
@@ -213,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "nWHF",
    "metadata": {},
    "outputs": [],
@@ -250,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "ZHCJ",
    "metadata": {},
    "outputs": [],
@@ -279,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "qnkX",
    "metadata": {},
    "outputs": [
@@ -839,17 +827,16 @@
       "CATnews Special Issue 13 Spring 2019\n",
       "\n",
       "\n",
-      "ai: The manul is a solitary, habitat-specialized wild cat adapted to cold, arid steppe and montane ecosystems across Central and Western Asia, relying on rocky outcrops and burrows for shelter and exhibiting seasonal coat changes and low population densities due to predation pressure and prey availability. It primarily preys on pikas, has a highly seasonal breeding cycle tied to photoperiod, and faces significant threats from predation, habitat fragmentation, and human activities, especially in fragmented western parts of its range.\n",
+      "ai: The manul is a solitary, habitat-specialized wild cat adapted to cold, arid steppe and montane ecosystems across Central and Western Asia, relying on rocky outcrops and burrows for shelter and exhibiting seasonal coat changes and low population densities. It primarily preys on pikas, faces high kitten mortality, and is threatened by predation, human activities, and habitat fragmentation, which increase its vulnerability despite a wide geographic range.\n",
       "\n",
       "| Feature | Description |\n",
       "|--------|-------------|\n",
-      "| **Habitat** | Montane grasslands, shrub-steppe, rocky outcrops, ravines; avoids deep snow (>15–20 cm) and open lowland deserts |\n",
-      "| **Diet** | Primarily small mammals (pikas, gerbils, voles); occasionally birds, reptiles, invertebrates, and scavenged material |\n",
+      "| **Habitat** | Montane grasslands, shrub-steppe, rocky outcrops, 450–5,593 m altitude |\n",
+      "| **Diet** | Primarily pikas (>50%), also rodents, small birds, and occasionally hares or marmots |\n",
       "| **Home Range** | Females: 7.4–125.2 km² (avg 23.1 km²); Males: 21–207 km² (avg 98.8 km²) in Mongolia |\n",
       "| **Density** | 4–8 individuals/100 km² in Mongolia; up to 100/100 km² in Dauria, Russia |\n",
-      "| **Reproduction** | Mating: Dec–Mar; Gestation: 66–75 days; Litter size: 3–4 (up to 8); Kitten mortality: ~68% before dispersal |\n",
-      "| **Lifespan** | Up to 6 years in the wild; up to 12 years in captivity |\n",
-      "| **Major Threats** | Predation (raptors, foxes, domestic dogs), habitat degradation, fragmentation, human persecution |\n"
+      "| **Reproduction** | Mating: Dec–Mar; Gestation: 66–75 days; Litter size: 3–4 (up to 8) |\n",
+      "| **Threats** | Predation (raptors, foxes, domestic dogs), habitat degradation, low dispersal resilience |\n"
      ]
     }
    ],
@@ -902,10 +889,8 @@
     "\n",
     "- Тулы вынесены в отдельные серверы, т.е. получаем независимый процесс/контейнер\n",
     "- Стандартизированный протокол: любой MCP-клиент может подключиться к любому MCP-серверу (ваши мсп-тулы могут быть использованы как агентом в IDE (cursor, claude code), так и в вашем фреймворке)\n",
-    "- Легко шарить один сервер между несколькими агентами/приложениями\n",
     "- Независимый деплой, версионирование, масштабирование каждого сервера\n",
-    "- Падение сервера тулов не убивает агента\n",
-    "- Поддержка не только тулов, но и ресурсов и промптов\n",
+    "- Поддержка не только тулов, но и различных middleware\n",
     "\n",
     "**Бесплатный сыр только в мышеловке**. Хоть и получаем много преимуществ, мы платим за это:\n",
     "- Overhead на сериализацию/десериализацию (JSON-RPC), сетевые вызовы\n",
