--- a/examples/tools/01-mcp-creation/combined-server/example.ipynb
+++ b/examples/tools/01-mcp-creation/combined-server/example.ipynb
@@ -22,18 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "bkHC",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen abc>:106: LangGraphDeprecatedSinceV10: AgentStatePydantic has been moved to `langchain.agents`. Please update your import to `from langchain.agents import AgentStatePydantic`. Deprecated in LangGraph V1.0 to be removed in V2.0.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import asyncio\n",
     "import os\n",
@@ -96,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "SFPL",
    "metadata": {},
    "outputs": [],
@@ -154,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "d5f45800-be34-48a4-add0-60dfccb04c50",
    "metadata": {},
    "outputs": [],
@@ -165,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "RGSE",
    "metadata": {},
    "outputs": [
@@ -183,7 +175,7 @@
       "\n",
       "Agent response:\n",
       "\n",
-      "Here is the multi-step analysis:\n",
+      "### Multi-Step Analysis Results:\n",
       "\n",
       "1. **Document Statistics**  \n",
       "   - Document: `test.pdf`  \n",
@@ -192,18 +184,28 @@
       "   - Lines: 547  \n",
       "\n",
       "2. **Factorial of Word Count**  \n",
-      "   The calculation of `3655!` (factorial of 3655) could not be performed due to computational limitations or syntax issues in the expression evaluator. This number is extremely large and typically requires special handling.\n",
+      "   - Attempted to calculate: `3655!`  \n",
+      "   - **Result**: Could not compute due to extremely large size. Factorials of large numbers like 3655 exceed computational limits in standard environments.\n",
       "\n",
       "3. **Reversed Document Name**  \n",
-      "   The reversed name of `test.pdf` is: `fdp.tset`\n",
+      "   - Original: `test.pdf`  \n",
+      "   - Reversed: `fdp.tset`\n",
       "\n",
-      "Let me know if you'd like an alternative approach for computing the factorial.\n"
+      "All tasks completed where feasible.\n"
      ]
     }
    ],
    "source": [
     "asyncio.run(main())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ba4987a-c4ec-486c-ad27-eeb8132a82ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
