--- a/examples/tools/01-mcp-creation/example.ipynb
+++ b/examples/tools/01-mcp-creation/example.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "## Как это работает?\n",
     "\n",
-    "MCP - протокол - по сути из себя представляет HTTP ручки с определенным порядком вызова, в котором обмен построен на стандартизированных JSON-сообщениях.\n",
+    "МСп это по сути соглашение о том, в каком JSON-формате клиент (LLM) и сервер (ваш код) обмениваются просьбами выполнить функции, независимо от того, как они соединены (через HTTP или просто через консольный ввод-вывод)\n",
     "\n",
     "Задействуется три компонента:\n",
     "\n",
@@ -100,7 +100,7 @@
    "source": [
     "## Какие использовать библиотеки?\n",
     "\n",
-    "В данном примере рассмотрим [FastMCP](https://gofastmcp.com/getting-started/welcome) (обертка над Starlette), тк эта библиотека активно развивается и поддерживает много фич. Но главное здесь - соблюдать протокол. Поэтому можно использовать и другие фреймворки, включая [оффициальную имплементацию MCP](https://github.com/modelcontextprotocol/python-sdk). **В том числе на других языках.**"
+    "В данном примере рассмотрим [FastMCP](https://gofastmcp.com/getting-started/welcome) (обертка над Starlette), тк эта библиотека активно развивается и поддерживает много фич. Но главное здесь - соблюдать протокол. Поэтому можно использовать и другие фреймворки, включая [оффициальную имплементацию MCP](https://github.com/modelcontextprotocol/python-sdk). **В том числе на других языках.** (помимо питон довольно популярен js/ts)."
    ]
   },
   {
@@ -113,18 +113,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "bkHC",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen abc>:106: LangGraphDeprecatedSinceV10: AgentStatePydantic has been moved to `langchain.agents`. Please update your import to `from langchain.agents import AgentStatePydantic`. Deprecated in LangGraph V1.0 to be removed in V2.0.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import asyncio\n",
     "import os\n",
@@ -169,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "Xref",
    "metadata": {},
    "outputs": [],
@@ -224,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "6cce6a46-cb57-42c5-8877-b25610768fab",
    "metadata": {},
    "outputs": [],
@@ -235,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "BYtC",
    "metadata": {},
    "outputs": [
@@ -248,19 +240,23 @@
       "  - analyze_document\n",
       "Agent response:\n",
       "\n",
-      "The manul (Otocolobus manul) is a small wild cat species adapted to cold, arid steppe and semi-desert ecosystems across Central and Western Asia. It exhibits unique morphological and behavioral traits, including dense fur for insulation, cryptic coloration for camouflage, and reliance on rocky outcrops and burrows for shelter. The species is solitary, with males having larger home ranges (avg. 98.8 km²) than females (avg. 23.1 km²) in Mongolia, and shows seasonal breeding patterns tied to photoperiod.\n",
+      "The manul (Otocolobus manul) is a small wild cat adapted to cold, arid steppe and semi-desert ecosystems across Central and Western Asia. It exhibits unique morphological and behavioral traits, including dense fur for insulation, cryptic coloration for camouflage, and reliance on rocky outcrops and burrows for shelter. The species is solitary, with large home ranges (up to 207 km² for males), low population densities (4–8/100 km² in Mongolia), and seasonal breeding tied to photoperiod. It primarily preys on pikas and small rodents, hunting at dawn and dusk using ambush, stalking, or flushing techniques.\n",
       "\n",
-      "Manuls primarily feed on small mammals, especially pikas, which constitute over 50% of their diet. They employ various hunting techniques such as stalking, ambush, and flushing prey. Despite a broad geographic range, populations are sparse and patchily distributed due to habitat specialization, predation pressure, and low prey availability.\n",
-      "\n",
-      "Threats include predation by raptors, foxes, wolves, and domestic dogs, as well as human-related mortality. High kitten mortality (up to 68%) and limited dispersal contribute to low population densities. The species also shows susceptibility to diseases like toxoplasmosis and feline immunodeficiency virus (FIV).\n",
-      "\n",
-      "Conservation concerns center on habitat fragmentation, loss of denning sites, and regional extinctions, particularly in the southwestern part of its range. Protection of suitable habitats and key resources like burrows and rocky shelters is essential for long-term survival.\n"
+      "Manuls face high kitten mortality and threats from predation (especially by raptors and domestic dogs), habitat fragmentation, and human activities. Their survival depends on access to den sites, which are critical for reproduction and protection. Despite a broad distribution, populations are patchy and declining in parts of the range, particularly in the southwest. Conservation efforts must address habitat connectivity, prey availability, and human-related mortality to ensure long-term survival.\n"
      ]
     }
    ],
    "source": [
     "asyncio.run(main())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97c9faa4-006f-4305-a60c-84994afb16b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
