--- a/examples/tools/02-mcp-remote/example.ipynb
+++ b/examples/tools/02-mcp-remote/example.ipynb
@@ -22,18 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "bkHC",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen abc>:106: LangGraphDeprecatedSinceV10: AgentStatePydantic has been moved to `langchain.agents`. Please update your import to `from langchain.agents import AgentStatePydantic`. Deprecated in LangGraph V1.0 to be removed in V2.0.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import asyncio\n",
     "import os\n",
@@ -82,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "Xref",
    "metadata": {},
    "outputs": [],
@@ -128,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "60377e41-326f-406a-9162-8137351c7f9a",
    "metadata": {},
    "outputs": [],
@@ -139,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "BYtC",
    "metadata": {},
    "outputs": [
@@ -482,25 +474,23 @@
       "\n",
       "* The original [*De finibus bonorum et malorum* (Book 1)](https://en.wikisource.org/wiki/la:De_finibus_bonorum_et_malorum/Liber_Primus \"s:la:De finibus bonorum et malorum/Liber Primus\") from Cicero, on Latin Wikisource\n",
       "\n",
-      "**Summary of Key Points from the Wikipedia Article on \"Lorem Ipsum\":**\n",
+      "**Summary of Key Points on \"Lorem Ipsum\":**\n",
       "\n",
-      "- **Purpose**: *Lorem ipsum* is a placeholder or dummy text used in graphic design, publishing, and web development to focus on layout and typography without being distracted by meaningful content.\n",
+      "1. **Purpose**: *Lorem ipsum* is a placeholder or dummy text used in graphic design, publishing, and web development. It helps designers focus on layout and typography without being distracted by meaningful content.\n",
       "\n",
-      "- **Origin**: It is derived from *De finibus bonorum et malorum*, a 1st-century BC philosophical text by Cicero. The dummy text is a corrupted version of sections 1.10.32 and 1.10.33 of this work, with altered, added, and removed words to make it nonsensical.\n",
+      "2. **Origin**: The text is derived from *De finibus bonorum et malorum*, a 1st-century BC philosophical work by the Roman statesman Cicero. The *Lorem ipsum* text is a distorted version of sections 1.10.32 and 1.10.33 of this work, with altered and missing words to make it nonsensical Latin.\n",
       "\n",
-      "- **History**: \n",
-      "  - Gained popularity in the 1960s through Letraset, which used it in transfer sheets for typesetting.\n",
-      "  - Entered the digital world in the mid-1980s via Aldus PageMaker, and later became standard in software like Microsoft Word, LaTeX, WordPress, and CSS frameworks.\n",
+      "3. **Historical Use**: \n",
+      "   - It gained popularity in the 1960s through Letraset, which sold transfer sheets with preprinted *Lorem ipsum* text.\n",
+      "   - It entered the digital age in the mid-1980s with Aldus PageMaker, and later became a standard in software such as Microsoft Word, LaTeX, WordPress, and CSS frameworks.\n",
       "\n",
-      "- **Discovery of Origin**: The link to Cicero was discovered by Richard McClintock, a Latin scholar, before 1982. He published his findings in 1994, correcting the misconception that *lorem ipsum* was meaningless.\n",
+      "4. **Discovery of Origin**: Richard McClintock, a Latin scholar, identified the source of *Lorem ipsum* in the 1980s while researching the word *consectetur*. He published his findings in 1994, debunking the idea that the text was meaningless.\n",
       "\n",
-      "- **Text Source**: The modern version likely originated from a scrambled version of a 1914 Loeb Classical Library edition of Cicero’s work, where the galley type for pages 34 and 36 was mixed.\n",
+      "5. **Common Version**: The most widely used version begins with \"Lorem ipsum dolor sit amet...\" and is a garbled version of Cicero's original writing, as seen in the 1914 Loeb Classical Library edition.\n",
       "\n",
-      "- **Common Version**: The standard *lorem ipsum* passage begins with \"Lorem ipsum dolor sit amet...\" and is widely used across design and publishing platforms.\n",
+      "6. **Modern Relevance**: *Lorem ipsum* remains a staple in the design world for prototyping layouts, testing fonts, and demonstrating visual elements across digital and print media.\n",
       "\n",
-      "- **Related Concepts**: The article lists several similar placeholder tools and concepts in design and computing, such as *Hamburgevons* (font testing), *Lenna* (image processing), and *metasyntactic variables* (e.g., \"foo\" and \"bar\" in programming).\n",
-      "\n",
-      "In essence, *lorem ipsum* is a time-tested placeholder rooted in classical Latin literature, repurposed for modern design workflows.\n"
+      "7. **Related Concepts**: The article also references similar placeholder tools and concepts such as *Hamburgevons* (for font testing), *Lenna* (a test image), and *metasyntactic variables* (used in programming).\n"
      ]
     }
    ],
@@ -520,6 +510,7 @@
     "- [Docker Hub MCP](https://hub.docker.com/mcp/explore)\n",
     "- [Glama MCP Servers](https://glama.ai/mcp/servers)\n",
     "- Научные инструменты: [academia_mcp](https://github.com/IlyaGusev/academia_mcp)\n",
+    "- МСП для работы с автокадом и создания чертежей: https://github.com/puran-water/autocad-mcp\n",
     "\n",
     "Вы можете:\n",
     "- Использовать готовые решения других разработчиков\n",
